upgrade to open telemetry